# Pico_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  setup.cfg
core/: config.py  events.py
core/models/: albums.py  images.py  tags.py  users.py
core/schemas/: albums.py  images.py  tags.py  users.py
core/services/image/: check.py
core/services/storage/: hash.py  minio.py
core/settings/: app.py  dev.py  prod.py  test.py
docs/: index.html
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/: HelloWorld.vue
scripts/: format  lint  test
tests/: conftest.py
tests/core/models/: test_images.py
v1/: api.py
v1/endpoints/: images.py
