[tool.poetry]
name = "pico_server"
version = "0.1.0"
description = "PICO - an image processing service online."
authors = ["jnhu <me@hoooo.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
passlib = { version = "^1.7", extras = ["bcrypt"] }
pydantic = { version = "^1.8", extras = ["email", "dotenv"] }
wand = "^0.6.7"
ujson = "^5.2.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.0"}
pyjwt = "^2.4.0"
python-slugify = "^5.0"
Unidecode = "^1.3"
loguru = "^0.6.0"
minio = "^7.1.8"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"
toml = "^0.10.2"
httpx = "^0.22.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
flake8-fixme = "^1.1.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-env = "^0.6.2"
pytest-xdist = "^2.5.0"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
